2006-02-06  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (StatementPattern): Expression node for serql
	statement patterns.
	(SelectContext.__slots__, SelectContext.__init__, addBinding) 
	(SelectContext.addBound, getIncarnation, getCondition) 
	(SelectContext.checkVariables, SelectContext.prettyPrint) 
	(exprFromTriple, Parser.exprFromPattern, Parser.selectQueryExpr):
	Don't attempt any relational mapping here, but generate
	StatementPattern nodes for the statement patterns. This implies
	that variables are checked in certain context to make sure they're
	bound, but they are not mapped.

2006-02-06  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (pathExprList, pathExpr, pathExprTail, node)
	(nodeElemList): Replace symbolic token references by explicit
	string references for better legibility.

2006-02-03  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/import.py: Make it possible to import to diverse
	databases.

2006-02-03  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/rdfxmlparse.py: Simple wrapper for Redland, to produce
	parsing results in a form that is usable by the version importer.

	* sqlmap/import.py: Basic version importer.

	* sqlmap/create-schema.sql: Refine schema.

2006-01-31  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/create-schema.sql: Initial SQL script for creating the
	database schema.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* expression/nodes.py (UnaryOperation.__init__): Fix super call.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/generate.py: A proof-of-concept translator to SQL.

	* expression/rewrite.py (treeApplyObject): New function for
	executing diverse method of an object on the nodes of an
	expression tree.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (Parser.exprFromTriple): Use readable column
	names instead of positional references for the canonical S
	relation.
